--- a/course.yml
+++ b/course.yml
@@ -1,7 +1,8 @@
-title            : test course
+title            : Test Course
 instructors      :
  - filip.schouwenaars@gmail.com
-description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
+description      : Test Course
 university       : DataCamp
 difficulty_level : 2
 time_needed      : 1 hour
+from             : 'r-base-prod:19'
